--- a/client/src/app/customer/views/components/settings/customer-settings/customer-settings.component.html
+++ b/client/src/app/customer/views/components/settings/customer-settings/customer-settings.component.html
@@ -1,4 +1,4 @@
-<profile-settings-form
+<customer-settings-form
 	[formData]="currentUser$ | async"
 	(formSubmit)="onSubmit($event)"
-></profile-settings-form>
+></customer-settings-form>
