--- a/client/src/app/pages/error404/error404.component.html
+++ b/client/src/app/pages/error404/error404.component.html
@@ -3,7 +3,7 @@
 		<div class="ke-box ke-box_margin-bottom_xl">
 			<img
 				class="ke-image ke-image_align_center"
-				src="https://izi-static.c.prom.st/images/drawings/mouse.svg"
+				src="/assets/images/mouse.svg"
 				width="320"
 				alt="Страница не найдена"
 			/>
