Add SettingsForm interface + catalog query const

--- a/client/src/app/auth/views/components/login/login.component.html
+++ b/client/src/app/auth/views/components/login/login.component.html
@@ -15,7 +15,7 @@
 					>
 				</div>
 			</div>
-			<form [formGroup]="form" (ngSubmit)="submit(form.value)">
+			<form [formGroup]="form" (ngSubmit)="handleSubmit(form.value)">
 				<div
 					class="ke-box ke-box_margin_none ke-box_margin_l@medium ke-box_padding_l"
 				>
