--- a/client/src/app/customer/views/components/settings/contact-info/contact-info.component.html
+++ b/client/src/app/customer/views/components/settings/contact-info/contact-info.component.html
@@ -16,7 +16,7 @@
 								></span
 							>
 						</div>
-						<span>vertig88@gmail.com</span>
+						<span>test@gmail.com</span>
 					</li>
 					<li class="ke-list__item">
 						<div class="ke-box ke-box_margin-bottom_xs">
@@ -24,7 +24,7 @@
 								>Номер телефона</span
 							>
 						</div>
-						+380684055442
+						+380970000000
 					</li>
 					<!--TODO: Hide my phone number-->
 					<!-- <li class="ke-list__item">
