--- a/client/src/app/customer/views/layout/sidebar/sidebar.component.html
+++ b/client/src/app/customer/views/layout/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
 			<div class="ke-picture ke-picture_round_full">
 				<img
 					class="ke-picture__item"
-					[attr.alt]="currentUser.firstname"
+					alt="{{ currentUser.firstname }}"
 					src="/assets/images/avatar.png"
 				/>
 			</div>
