--- a/client/src/app/catalog/views/layout/catalog-layout/catalog-layout.component.html
+++ b/client/src/app/catalog/views/layout/catalog-layout/catalog-layout.component.html
@@ -68,23 +68,18 @@
 							</ng-container>
 						</div>
 					</div>
-					<div class="ke-box ke-box_margin-bottom_xl">
-						<div class="ke-grid ke-grid_align_right">
-							<div class="ke-grid__item">
-								<product-sorter
-									(onSort)="onSortChange($event)"
-								></product-sorter>
-							</div>
-						</div>
-					</div>
-					<product-list [collection]="data.collection">
-						<product-list-toolbar *ngIf="productCollectionSize">
-							<app-pager
-								[collectionSize]="productCollectionSize"
-								[(page)]="currentPage"
-								(pageChange)="onPageChange($event)"
-							></app-pager>
-						</product-list-toolbar>
+					<product-list
+						[collection]="data.collection"
+						*ngIf="productCollectionSize"
+					>
+						<product-sorter
+							(onSort)="onSortChange($event)"
+						></product-sorter>
+						<app-pager
+							[collectionSize]="productCollectionSize"
+							[(page)]="currentPage"
+							(pageChange)="onPageChange($event)"
+						></app-pager>
 					</product-list>
 				</main>
 			</div>
